# emysound-feeder-rs

./: .gitignore  Cargo.toml
scripts/: emysound-add-track.sh  emysound-delete-all-tracks.sh  emysound-query-track.sh
src/: db.rs  emysound-requests.sh  emysound.rs  main.rs
src/emysound/: matcher.rs  mod.rs
src/storage/: audio.rs  matches.rs  metadata.rs  mod.rs
