[package]
name = "emysound-feeder-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.57", features = ["backtrace"] }
bytes = "1.1.0"
chrono = "0.4.19"
clap = { version = "3.1.16", features = ["derive"] }
emycloud-client-rs = {path ="../emycloud-client-rs"}
hls_m3u8 = { version = "0.4.1", features = ["chrono", "backtrace"] }
itertools = "0.10.3"
lazy_static = "1.4.0"
log = "0.4.17"
lru = "0.7.5"
regex = "1.5.5"
reqwest = { version = "0.11.10", features = ["stream"] }
simplelog = "0.12.0"
tokio = { version = "1", features = ["full", "fs"] } # version 1 required for reqwest
tokio-stream = "0.1.8"
uuid = { version = "1.0.0", features = ["v4"] }
